css/style.css
   
    body,
html {
    margin: 0;
    color: #232929;
    height: 100%;
    width: 100%;
    background-color: #fff;
    line-height: 30px;
    text-decoration: none;

}

p {
    font-family: 'open sans', 'sans-serif';
    font-size: 18px;
    color: #232929;
}

img {
    max-width: 100%;
    height: auto;
}

header.navbar-fixed-top {
    animation-duration: 1s;
    animation-name: fadeInDown;
    animation-timing-function: ease-in-out;
    background: rgba(255, 255, 255, 0.9) none repeat fixed 0 0;
    box-shadow: 0 4px 12px -4px rgba(0, 0, 0, 0.75);
    left: 0;
    padding-top: 20px;
    position: fixed;
    right: 0;
    top: 0;
    width: 100%;
    z-index: 999;
    font-weight: 500;
}

h2 {
    color: #232929;
    text-align: center;
    font-family: 'Roboto', 'sans-serif';
    margin-top: 50px;
    font-size: 50px;
}

h5 {
    font-family: 'open sans';
    font-size: 20px;
    font-weight: 600;
    color: #666;
}

.navbar-fixed-top .light-logo {
    opacity: 0;
    display: none;
}

.navbar-fixed-top .dark-logo {
    opacity: 1;
    display: block;
    padding-bottom: 10px;
}

header.navbar-fixed-top .menu-links a {
    color: #444;
}


/* Pre-loader 

#loader-wrapper {
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 1000;
}

#loader {
    position: absolute;
    left: 50%;
    top: 50%;
    text-align: center;
    z-index: 1001;
}

.loader-balls {
    display: block;
    height: 20px;
    width: 20px;
    background: #444;
    border-radius: 50%;
    position: absolute;
    top: 0px;
}

#ball-1 {
    animation: bounce 1s ease-in-out 0.33s infinite;
}

#ball-2 {
    position: absolute;
    left: 40px;
    animation: bounce 1s ease-in-out 0.66s infinite;
}

#ball-3 {
    position: absolute;
    left: 80px;
    animation: bounce 1s ease-in-out 1s infinite;
}

@keyframes bounce {
    0%,
    75%,
    100% {
        transform: translateY(0px);
    }
    25% {
        transform: translateY(-30px);
    }
}

#loader-wrapper .loader-section {
    position: fixed;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: #fff;
    z-index: 1000;
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
}

.loader-section.section-left {
    left: 0;
}

.loader-section.section-right {
    right: 0;
}

.loaded #loader {
    opacity: 0;
    -webkit-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}

.loaded #loader-wrapper {
    visibility: hidden;
    -webkit-transform: translateY(-100%);
    -ms-transform: translateY(-100%);
    transform: translateY(-100%);
    -webkit-transition: all 0.3s 1s ease-out;
    transition: all 0.3s 1s ease-out;
}


/* End Loader */


/* Start Header */

header {
    background: rgba(255,255,255,0);   
    position: absolute;
    top: 0;
    padding: 15px 0;
    width: 100%;
    z-index: 99;
    line-height: 30px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.2);

}

header .dark-logo {
    opacity: 0;
    display: none;
    margin-top: 5px;
}

header .light-logo {
    margin-top: 5px;
}

.menu-links {
    text-align: right;
}

.menu-links ul li {
    display: inline-block;
    margin-right: 15px;
    position: relative;
    padding-top: 15px;
}

.menu-links ul li a {
    font-family: 'open sans', 'sans-serif';
    padding: 0px 15px;
    text-transform: uppercase;
    text-decoration: none;
    color: #fff;
    font-weight: 600;
}

.menu-links ul li:hover > a {
    color: #32c4e9;
}


/* Responsive Menu */

.mobile-logo-section {
    text-align: center;
    padding: 15px 0;
}

.navbar.navbar-inverse {
    margin: 0;
}

.navbar-nav{
    margin:0;
}

.navbar.navbar-inverse .navbar-toggle {
    background-color: #222;
}

.navbar-inverse .navbar-collapse {
    
    background-color: #232929;
    visibility: visible;
}

.navbar .navbar-header {
    background-color: #232929;
    border: none;
}

#myCollapsingList {
    background-color: #232929;
    visibility: visible;
}

#myCollapsingList li a {
    color: #32c4e9;
    background-color: #232929;
    font-family: 'open sans', 'sans-serif';
    font-weight: 600;
}


/* Jumbotron Section */

.jumbotron-section {
    background: rgba(0, 0, 0, 0) url("http://i63.tinypic.com/2s0xna8.jpg") no-repeat fixed 0 0 / cover;
    height: 100%;
    position: relative;
}

.jumbotron-content {
    left: 0;
    position: absolute;
    right: 0;
    text-align: center;
    top: 55%;
    transform: translateY(-50%);
    z-index: 9;
}

.jumbotron-content h1 {
    color: #fff;
    font-size: 60px;
    text-align: center;
    text-decoration: none;
    font-family: 'Roboto', helvetica, sans-serif;
    
}
.jumbotron-content h1:hover span{
    color:#32c4e9;
}

.jumbotron-content p {
    color: #fff;
    font-size: 28px;
    text-align: center;
    text-decoration: none;
    font-family: 'open sans', helvetica, sans-serif;
    font-weight: 400;
    
}

.jumbotron-content ul {
    margin-top: 82px;
    margin-bottom: 40px;
    margin-right: 30px;
}

.jumbotron-content ul li {
    display: inline-block;
    margin: 0 3px;
}

.jumbotron-content ul li a {
    border: 2px solid #fff;
    border-radius: 100%;
    box-shadow: 0 0 20px rgba(255, 255, 255, 0) inset;
    color: #fff;
    display: inline-block;
    font-size: 16px;
    width: 50px;
    height: 50px;
    line-height: 45px;
    text-shadow: none;
    -webkit-transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1) 0s;
    -o-transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1) 0s;
    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1) 0s;
}

.jumbotron-content ul li a:hover {
    border: none;
}

.jumbotron-content ul li:nth-child(1) a:hover {
    background-color: #3d589b;
}

.jumbotron-content ul li:nth-child(2) a:hover {
    background-color: #34cbff;
}

.jumbotron-content ul li:nth-child(3) a:hover {
    background-color: #0077B5;
}

.jumbotron-content ul li:nth-child(4) a:hover {
    background-color: #d34836;
}
/* ... */

